--- a/www/common/translations/messages.json
+++ b/www/common/translations/messages.json
@@ -1385,6 +1385,7 @@
     "bounce_danger": "The link you clicked does not lead to a web-page but to some code or data that could be malicious.\n\n(\"{0}\")\n\nCryptPad blocks these for security reasons. Clicking OK will close this tab.",
     "admin_archiveNote": "Note",
     "admin_nameTitle": "Instance name",
+    "admin_appsTitle": "Choose your applications",
     "admin_nameHint": "The name displayed for this instance in the list of public instances on cryptpad.org",
     "ui_saved": "{0} saved",
     "admin_descriptionTitle": "Instance description",
@@ -1428,6 +1429,7 @@
     "ui_experimental": "This feature is considered experimental.",
     "admin_noticeTitle": "Home page notice",
     "admin_noticeHint": "An optional message to display on the home page",
+    "admin_appsHint": "Choose which apps are available to users on your instance.",
     "footer_website": "Project Website",
     "home_location": "Encrypted data is hosted in {0}",
     "home_morestorage": "For more storage space:",
@@ -1437,6 +1439,7 @@
     "admin_uptimeHint": "Date and time at which the server was launched",
     "admin_cat_database": "Database",
     "admin_generatedAt": "Report timestamp",
+    "admin_cat_apps": "Apps",
     "ui_true": "true",
     "ui_false": "false",
     "ui_undefined": "unknown",
