Removed onboarding flow and popup modal; made text content adjustments across the app

--- a/www/common/translations/messages.json
+++ b/www/common/translations/messages.json
@@ -612,7 +612,7 @@
     "autostore_error": "Unexpected error: we were unable to store this document, please try again.",
     "autostore_saved": "The document was successfully stored in your CryptDrive!",
     "autostore_forceSave": "Store the file in your CryptDrive",
-    "autostore_notAvailable": "You must store this document in your CryptDrive before being able to use this feature.",
+    "autostore_notAvailable": "You must store this document in your MyDrive before being able to use this feature.",
     "crowdfunding_button": "Support CryptPad",
     "crowdfunding_button2": "Donate",
     "crowdfunding_popup_text": "<h3>We need your help!</h3>To ensure that CryptPad is actively developed, consider supporting the project via the OpenCollective page, where you can see our <b>Roadmap</b> and <b>Funding goals</b>.",
@@ -820,7 +820,7 @@
     "share_contactPasswordAlert": "This item is password protected. Because you are sharing it with a CryptPad contact, the recipient will not have to enter the password.",
     "share_embedPasswordAlert": "This item is password protected. When you embed this document, viewers will be asked for the password.",
     "passwordFaqLink": "Read more about passwords",
-    "share_noContactsLoggedIn": "You are not connected with anyone on CryptPad yet. Share the link to your profile for people to send you contact requests.",
+    "share_noContactsLoggedIn": "You are not connected with anyone on MyDrive yet. Share the link to your profile for people to send you contact requests.",
     "share_copyProfileLink": "Copy profile link",
     "share_noContactsNotLoggedIn": "Log in or register to see your existing contacts and add new ones.",
     "contacts_mute": "Mute",
@@ -1180,7 +1180,7 @@
     "calendar_notifications": "Reminders",
     "calendar_addNotification": "Add reminder",
     "calendar_noNotification": "None",
-    "toolbar_storeInDrive": "Store in CryptDrive",
+    "toolbar_storeInDrive": "Store in MyDrive",
     "genericCopySuccess": "Copied to clipboard",
     "mediatag_defaultImageName": "image",
     "register_registrationIsClosed": "Registration is closed.",
