other option for checkbox

--- a/www/common/translations/messages.json
+++ b/www/common/translations/messages.json
@@ -1350,6 +1350,10 @@
     "form_required_answer": "Answer: ",
     "form_required_on": "Required",
     "form_required_off": "Optional",
+    "form_other_option": "Additional text option: ",
+    "form_other_on": "Enabled",
+    "form_other_off": "Disabled",
+    "form_other_placeholder": "Other...",
     "form_preview": "Preview form",
     "form_changeTypeConfirm": "Select the new question type.",
     "form_corruptAnswers": "This form already has responses. Changing this question type may invalidate previous response data.",
