--- a/www/common/translations/messages.json
+++ b/www/common/translations/messages.json
@@ -1570,6 +1570,11 @@
     "form_multiple": "Multiple times",
     "form_multiple_edit": "Multiple times and edit/delete",
     "form_editable_str": "Submission",
+    "form_maxResponses_setting": "Maximum responses",
+    "form_maxResponses_placeholder": "No limit",
+    "form_maxResponsesStr": "Limit: {0} responses",
+    "form_maxResponses_remove": "Unset limit",
+    "form_maxResponsesReached": "This form has reached the maximum number of responses and is now closed.",
     "team_linkUsesInfinite": "(unlimited uses)",
     "team_linkUses": "({0}/{1} remaining)",
     "form_anonymized": "Responses are anonymized",
